{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 13,
  "lineage": "c86fbe4f-1958-ccba-fb9a-5941e5ab11b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0898e0924e8dc5ff4",
            "arn": "arn:aws:ec2:ap-northeast-2:070839874981:elastic-ip/eipalloc-0898e0924e8dc5ff4",
            "association_id": "eipassoc-02c0010ad6bd5f884",
            "domain": "vpc",
            "id": "eipalloc-0898e0924e8dc5ff4",
            "instance": "i-0458c4dcc0931dd91",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0ce544720cab6f1d5",
            "private_dns": "ip-10-0-0-250.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.250",
            "public_dns": "ec2-54-116-19-148.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.116.19.148",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.main",
            "aws_key_pair.main",
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.main",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-010be25c3775061c9",
            "arn": "arn:aws:ec2:ap-northeast-2:070839874981:instance/i-0458c4dcc0931dd91",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0458c4dcc0931dd91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Tom",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ce544720cab6f1d5"
              }
            ],
            "primary_network_interface_id": "eni-0ce544720cab6f1d5",
            "private_dns": "ip-10-0-0-250.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.250",
            "public_dns": "ec2-43-203-196-93.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.196.93",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-019ad335d9fb80c60",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b81a4918d89a8f1",
            "tags": {
              "Name": "Tom-instance"
            },
            "tags_all": {
              "Name": "Tom-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03e19c6e10b457d1f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "070839874981",
            "id": "i-0458c4dcc0931dd91",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.main",
            "tls_private_key.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:070839874981:internet-gateway/igw-03880fe1d70a87e42",
            "id": "igw-03880fe1d70a87e42",
            "owner_id": "070839874981",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Tom-igw"
            },
            "tags_all": {
              "Name": "Tom-igw"
            },
            "vpc_id": "vpc-0e7a293a2eb4a3afd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:070839874981:route-table/rtb-086dee82aefcd069b",
            "id": "rtb-086dee82aefcd069b",
            "owner_id": "070839874981",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03880fe1d70a87e42",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tom-rtb"
            },
            "tags_all": {
              "Name": "Tom-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7a293a2eb4a3afd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "070839874981",
            "id": "rtb-086dee82aefcd069b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08870382b6f25b9f0",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-086dee82aefcd069b",
            "subnet_id": "subnet-08b81a4918d89a8f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:070839874981:security-group/sg-03e19c6e10b457d1f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e19c6e10b457d1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Tom-security-group",
            "name_prefix": "",
            "owner_id": "070839874981",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Tom-security-group"
            },
            "tags_all": {
              "Name": "Tom-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7a293a2eb4a3afd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "070839874981",
            "id": "sg-03e19c6e10b457d1f",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:070839874981:subnet/subnet-08b81a4918d89a8f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b81a4918d89a8f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "070839874981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Tom-subnet"
            },
            "tags_all": {
              "Name": "Tom-subnet"
            },
            "vpc_id": "vpc-0e7a293a2eb4a3afd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "070839874981",
            "id": "subnet-08b81a4918d89a8f1",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:070839874981:vpc/vpc-0e7a293a2eb4a3afd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0969a2965d6c08065",
            "default_route_table_id": "rtb-002cac1dc5789a17b",
            "default_security_group_id": "sg-023751da3d308632d",
            "dhcp_options_id": "dopt-dc2fb5b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e7a293a2eb4a3afd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002cac1dc5789a17b",
            "owner_id": "070839874981",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Tom-vpc"
            },
            "tags_all": {
              "Name": "Tom-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "070839874981",
            "id": "vpc-0e7a293a2eb4a3afd",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}